docs/envoy/v1.13.0/_sources/api-v3/type/matcher/v3/string.proto.rst.txt
.. _envoy_v3_api_file_envoy/type/matcher/v3/string.proto:

StringMatcher
=============


.. _envoy_v3_api_msg_type.matcher.v3.StringMatcher:

type.matcher.v3.StringMatcher
-----------------------------

`[type.matcher.v3.StringMatcher proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/type/matcher/v3/string.proto#L19>`_

Specifies the way to match a string.

.. code-block:: json

  {
    "exact": "...",
    "prefix": "...",
    "suffix": "...",
    "safe_regex": "{...}"
  }

.. _envoy_v3_api_field_type.matcher.v3.StringMatcher.exact:

exact
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The input string must match exactly the string specified here.
  
  Examples:
  
  * *abc* only matches the value *abc*.
  
  
  
  Precisely one of :ref:`exact <envoy_v3_api_field_type.matcher.v3.StringMatcher.exact>`, :ref:`prefix <envoy_v3_api_field_type.matcher.v3.StringMatcher.prefix>`, :ref:`suffix <envoy_v3_api_field_type.matcher.v3.StringMatcher.suffix>`, :ref:`safe_regex <envoy_v3_api_field_type.matcher.v3.StringMatcher.safe_regex>` must be set.
  
.. _envoy_v3_api_field_type.matcher.v3.StringMatcher.prefix:

prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The input string must have the prefix specified here.
  Note: empty prefix is not allowed, please use regex instead.
  
  Examples:
  
  * *abc* matches the value *abc.xyz*
  
  
  
  Precisely one of :ref:`exact <envoy_v3_api_field_type.matcher.v3.StringMatcher.exact>`, :ref:`prefix <envoy_v3_api_field_type.matcher.v3.StringMatcher.prefix>`, :ref:`suffix <envoy_v3_api_field_type.matcher.v3.StringMatcher.suffix>`, :ref:`safe_regex <envoy_v3_api_field_type.matcher.v3.StringMatcher.safe_regex>` must be set.
  
.. _envoy_v3_api_field_type.matcher.v3.StringMatcher.suffix:

suffix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The input string must have the suffix specified here.
  Note: empty prefix is not allowed, please use regex instead.
  
  Examples:
  
  * *abc* matches the value *xyz.abc*
  
  
  
  Precisely one of :ref:`exact <envoy_v3_api_field_type.matcher.v3.StringMatcher.exact>`, :ref:`prefix <envoy_v3_api_field_type.matcher.v3.StringMatcher.prefix>`, :ref:`suffix <envoy_v3_api_field_type.matcher.v3.StringMatcher.suffix>`, :ref:`safe_regex <envoy_v3_api_field_type.matcher.v3.StringMatcher.safe_regex>` must be set.
  
.. _envoy_v3_api_field_type.matcher.v3.StringMatcher.safe_regex:

safe_regex
  (:ref:`type.matcher.v3.RegexMatcher <envoy_v3_api_msg_type.matcher.v3.RegexMatcher>`) The input string must match the regular expression specified here.
  
  
  
  Precisely one of :ref:`exact <envoy_v3_api_field_type.matcher.v3.StringMatcher.exact>`, :ref:`prefix <envoy_v3_api_field_type.matcher.v3.StringMatcher.prefix>`, :ref:`suffix <envoy_v3_api_field_type.matcher.v3.StringMatcher.suffix>`, :ref:`safe_regex <envoy_v3_api_field_type.matcher.v3.StringMatcher.safe_regex>` must be set.
  


.. _envoy_v3_api_msg_type.matcher.v3.ListStringMatcher:

type.matcher.v3.ListStringMatcher
---------------------------------

`[type.matcher.v3.ListStringMatcher proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/type/matcher/v3/string.proto#L58>`_

Specifies a list of ways to match a string.

.. code-block:: json

  {
    "patterns": []
  }

.. _envoy_v3_api_field_type.matcher.v3.ListStringMatcher.patterns:

patterns
  (:ref:`type.matcher.v3.StringMatcher <envoy_v3_api_msg_type.matcher.v3.StringMatcher>`, *REQUIRED*) 
  

